tests/trybuild/entities/semicolon_separated.stderr
error: no rules expected the token `;`
  --> tests/trybuild/entities/semicolon_separated.rs:10:44
   |
10 |     let entities = entities!((A, B); (A, B); (A, B));
   |                                            ^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$n:expr`
  --> src/entities/mod.rs
   |
   |     (($component:expr $(,$components:expr)* $(,)?); $n:expr) => {
   |                                                     ^^^^^^^
